--- a/myntra-clone-app/src/HoverBox/Hover.css
+++ b/myntra-clone-app/src/HoverBox/Hover.css
@@ -7,6 +7,8 @@
     position: fixed;
     z-index: 20;
     background-color: white;
+    display: none;
+    padding: 1%;
 }
 .hoverbox h4{
     color: red;
